--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,50 @@ body {
   overflow-y: hidden;
 }
 
+.modal {
+  background-color: black;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
+  opacity: 0.9;
+}
+
+.modal_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 100%;
+}
+
+.modal_input_container {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
+}
+
+.modal_input {
+  height: 30px;
+  border-radius: 5px;
+}
+
+.modal_btn {
+  display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid #000;
+    background-color: #fff;
+    color: #000;
+    height: 30px;
+    width: 60px;
+    margin-left: 30px;
+    border-radius: 5px;
+}
+
+.modal_btn:hover {
+  cursor: pointer;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
